backend/.clippy-baseline.txt

    |
    |                      ^^^^^^^^^^^^^^^^^ missing `production_order_id`
    |                    ^^^^^^^^^^^ missing `data_scope` and `department_id`
    |         ^^^^^^^^^^^^^^^^^^^^^^ missing `color_no`, `dye_lot_no` and `grade`
   --> src/handlers/init_handler.rs:564:20
   --> src/services/ai/quality_pred.rs:507:9
   --> src/services/dye_batch_state_machine_service.rs:849:22
507 |         QualityInspectionModel {
564 |         let auth = AuthContext {
849 |         let active = ReworkActiveModel {
error[E0063]: missing field `production_order_id` in initializer of `models::dye_batch_rework::ActiveModel`
error[E0063]: missing fields `color_no`, `dye_lot_no` and `grade` in initializer of `models::quality_inspection_record::Model`
error[E0063]: missing fields `data_scope` and `department_id` in initializer of `middleware::auth_context::AuthContext`
warning: this function has too many arguments (8/7)
